Fixed bugs for image not showing in github hosting

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ header nav{
 }
 
 header {
-    background-image: url(/Assets/Hero-bg.png);
+    background-image: url(./Assets/Hero-bg.png);
     height: 698px;
 }
 
